--- a/style.css
+++ b/style.css
@@ -10,3 +10,18 @@ body {}
     justify-content: space-between;
     align-items: center;
 }
+
+.logo-name {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.head-manu a {
+    text-decoration: none;
+    margin: 10px;
+    font-size: 18px;
+}
+
+.fa-solid {
+    margin: 5px;
+}
