--- a/style.css
+++ b/style.css
@@ -25,3 +25,30 @@ body {}
 .fa-solid {
     margin: 5px;
 }
+
+/* banner start 
+================ */
+.top-banner {
+    margin-top: 20px;
+}
+
+.banners {
+    display: flex;
+}
+
+.banner-name {
+    font-size: 50px;
+    font-weight: 700;
+}
+
+.banner-img {
+    background-image: url(images/Circle\ design.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.banner-img img {
+    width: 100%;
+    height: 100%;
+}
