--- a/style.css
+++ b/style.css
@@ -39,6 +39,15 @@ body {}
 .banner-name {
     font-size: 50px;
     font-weight: 700;
+    line-height: 50px;
+    margin-bottom: 5px;
+}
+
+.banner-details {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20px;
+    margin-bottom: 25px;
 }
 
 .banner-img {
