--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {}
 
 .container {
-    width: 900px;
+    width: 810px;
     margin: 0 auto;
 }
 
@@ -69,4 +69,69 @@ body {}
 .banner-img img {
     width: 100%;
     height: 100%;
+}
+
+/* company logo start 
+===================== */
+.logo-container {
+    width: 810px;
+    margin: 0 auto;
+}
+
+.company-logo {
+    margin-top: 25px;
+}
+
+.logo {
+    border: 1px solid white;
+    box-shadow: 1px 1px 1px 0px wheat;
+    padding: 10px;
+}
+
+.logo img {
+    width: 70px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 35px;
+}
+
+/* blogs section start 
+====================== */
+.blog-container {
+    width: 780px;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.blog-title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.blog-thumbnail img {
+    width: 230px;
+    height: 230px;
+    align-items: center;
+}
+
+.blog-name {
+    font-size: 24px;
+    line-height: 10px;
+}
+
+.blog-price {
+    font-size: 23px;
+}
+
+.blog-ratings i {
+    font-size: 10px;
+    margin: 0;
+    line-height: 2px;
 }
