box-shadow added

--- a/style.css
+++ b/style.css
@@ -115,6 +115,13 @@ body {}
     grid-template-columns: repeat(3, 1fr);
 }
 
+.blog {
+    box-shadow: 1px 0px 9px -2px;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
 .blog-thumbnail img {
     width: 230px;
     height: 230px;
