--- a/style.css
+++ b/style.css
@@ -152,3 +152,9 @@ body {}
     font-size: 16px;
     font-weight: bold;
 }
+
+.arrow {
+    text-align: end;
+    color: #E02C6D;
+    font-size: 16px;
+}
