--- a/style.css
+++ b/style.css
@@ -210,8 +210,9 @@ body {}
 /* footer start 
 ================ */
 footer {
+    padding: 50px;
     margin-top: 60px;
-    background-color: black;
+    background-color: #0A0826;
 }
 
 * {
@@ -221,4 +222,19 @@ footer {
 .footer-bottom {
     color: white;
     text-align: center;
+}
+
+.footer-name {
+    font-size: 30px;
+}
+
+.footer-desk {
+    margin-top: 10px;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.footer-media i {
+    font-size: 15px;
+    margin: 5px;
 }
