media querry added

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {}
     margin: 5px;
 }
 
+@media only screen and (max-width: 600px) {}
+
 /* banner start 
 ================ */
 .top-banner {
@@ -70,6 +72,25 @@ body {}
 .banner-img img {
     width: 100%;
     height: 100%;
+}
+
+/* media banner start 
+===================== */
+@media screen and (max-width:500px) {
+    .container {
+        text-align: center;
+    }
+
+    .banners {
+        flex-direction: column-reverse;
+    }
+
+    .banner-name {
+        font-size: 70px;
+        line-height: 80px;
+        margin-top: 30px;
+        font-weight: 900;
+    }
 }
 
 /* company logo start 
