new media added

--- a/style.css
+++ b/style.css
@@ -90,6 +90,13 @@ body {}
         line-height: 80px;
         margin-top: 30px;
         font-weight: 900;
+        color: #3A3A3A;
+    }
+
+    .banner-details {
+        font-size: 39px;
+        line-height: 50px;
+        color: #3A3A3A;
     }
 }
 
