feature media css added

--- a/style.css
+++ b/style.css
@@ -208,6 +208,39 @@ body {}
     font-size: 16px;
 }
 
+@media screen and (max-width:500px) {
+    .blog-title {
+        font-size: 35px;
+        color: #3A3A3A;
+    }
+
+    .blogs {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .blog-thumbnail img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .blog-name {
+        font-size: 40px;
+    }
+
+    .blog-price {
+        font-size: 35px;
+        line-height: 40px;
+
+    }
+
+    .blog-ratings {
+        font-size: 20px;
+        line-height: 25px;
+    }
+
+}
+
 /* feature section 
 ================== */
 .feature-container {
@@ -254,6 +287,40 @@ body {}
     border-radius: 3px;
     background-color: #E02C6D;
     color: white;
+}
+
+/* feature media start 
+====================== */
+@media screen and (max-width:500px) {
+    .features {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .feature-name {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .feature-blog {
+        font-size: 30px;
+        text-align: center;
+        font-weight: bold;
+        line-height: 30px;
+    }
+
+    .btn2 {
+        margin: 20px;
+        padding: 9px 50px 12px;
+        font-size: 24px;
+        border-radius: 10px;
+    }
+
+    .feature img {
+        width: 50%;
+        height: 100%;
+
+    }
 }
 
 /* footer start 
