--- a/style.css
+++ b/style.css
@@ -354,3 +354,11 @@ footer {
     font-size: 15px;
     margin: 5px;
 }
+
+/* footer media start 
+==================== */
+@media screen and (max-width:500px) {
+    footer {
+        width: 700px;
+    }
+}
